src/main/java/com/example/attendance/errors/ResourceNotFoundException.java
package com.example.attendance.errors;

public class ResourceNotFoundException extends RuntimeException{
    public ResourceNotFoundException(String message) {
        super(message);
    }
}
